--- a/gpds-2024-automoviles-estudiante/gpds-autos/Dockerfile
+++ b/gpds-2024-automoviles-estudiante/gpds-autos/Dockerfile
@@ -7,7 +7,7 @@ RUN mvn clean package -DskipTests
 
 FROM openjdk:17-slim
 WORKDIR /app
-COPY --from=build /app/target/gpds-autos-0.0.1-SNAPSHOT.jar ./app.jar
+COPY --from=build /app/target/gpds-autos-0.0.1-SNAPSHOT.jar app.jar
 EXPOSE 8080
 ENTRYPOINT ["Java","-jar","app.jar"]
 
