--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
             - ./mysql-data:/var/lib/mysql
     app:
         build:
-            context: ./gpds-autos
+            context: ./gpds-2024-automoviles-estudiante/gpds-autos
             dockerfile: Dockerfile
         environment:
             SPRING_DATASOURCE_URL: jdbc:mysql://mysql-db:3306/autos-10a
